Cycles materials cannot be manipulated using drivers #31834

Closed
opened 2012-06-14 17:05:46 +02:00 by Timo Rychert · 6 comments

Duplicates: #31834

%%%Hello,

it is possible to add a driver to cycles materials, but when trying to use the driver it doesn't work, it doesn't change any value.
When you turn on the debug info the "Value" in the variable field isn't even changed at all, even if you for example move the connected bone while using transform channel.

I don't know if this is a bug, or by design, but if this would be by design, why would the UI allow me to even add a driver?

Attatched is a file demonstrating the problem.
If you move the bone up the global z axis the Fac value in the monkey's material should change, but it doesn't.

If this is an already know issue, I apologize, I couldn't find much about it.

Thank you!
MD%%%

**Duplicates**: #31834 %%%Hello, it is possible to add a driver to cycles materials, but when trying to use the driver it doesn't work, it doesn't change any value. When you turn on the debug info the "Value" in the variable field isn't even changed at all, even if you for example move the connected bone while using transform channel. I don't know if this is a bug, or by design, but if this would be by design, why would the UI allow me to even add a driver? Attatched is a file demonstrating the problem. If you move the bone up the global z axis the Fac value in the monkey's material should change, but it doesn't. If this is an already know issue, I apologize, I couldn't find much about it. Thank you! MD%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Brecht, can you please look into this? Probably that's just a limitation you already aware of.%%%

%%%Brecht, can you please look into this? Probably that's just a limitation you already aware of.%%%

%%%Joshua, do you know if and how this is supposed to work? I can't find any place in the code where drivers for materials or their node trees are evaluated, only for scenes and objects.%%%

%%%Joshua, do you know if and how this is supposed to work? I can't find any place in the code where drivers for materials or their node trees are evaluated, only for scenes and objects.%%%
%%%Closed duplicate http://projects.blender.org/tracker/index.php?func=detail&aid=31834&group_id=9&atid=498%%%
Member

%%%Brecht: indeed there was never any code for this. I was under the impression that there was some code in place for recalculating the drivers, just that this wasn't able to get called for whatever reason.

I've applied a fix for this in svn (r.48515). It seems to fix the problems, but further testing is still required to see if it has any really nasty performance penalty.%%%

%%%Brecht: indeed there was never any code for this. I was under the impression that there was some code in place for recalculating the drivers, just that this wasn't able to get called for whatever reason. I've applied a fix for this in svn (r.48515). It seems to fix the problems, but further testing is still required to see if it has any really nasty performance penalty.%%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#31834
No description provided.